# hpc-multibench

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  TODO.md  mkdocs.yml  pyproject.toml  slurm-775886.out  slurm-775887.out  testing_plan.yaml
.github/workflows/: docs.yml  python-package.yml  test.yml
docs/: contributing.md  gallery.md  index.md  manual.md  quickstart.md  yaml_schema.md
docs/assets/images/uml/: hpc_multibench_data_flow.drawio
docs/reference/: main.md  plot.md  roofline_model.md  run_configuration.md  test_bench.md  tui.md  yaml_model.md
pyproject_template/: __main__.py  main.py
src/hpc_multibench/: __main__.py  analysis.py  configuration.py  dsl_example.py  main.py  roofline_model.py  run_configuration.py  test_bench.py  test_harness.py  test_plan.py  uncertainties.py  yaml_ingest.py  yaml_model.py
src/hpc_multibench/bak/: analysis.py  test_plan_bak.py
src/hpc_multibench/plot/: export_data.py  plot_data.py  plot_matplotlib.py  plot_plotext.py
src/hpc_multibench/tui/: __init__.py  bash_highlights.py  interactive_ui.py  interactive_ui.tcss  user_interface.py  user_interface.tcss
src/pyproject_template/: __main__.py
src_bak/: yaml_model.py
src_bak/tui/: user_interface.tcss
tests/: test_main.py
yaml_examples/: avon_plan.yaml  cpp_rust_comp_plan.yaml  example.yaml  kudu_plan.yaml  kudu_strong_weak_scaling.yaml  reruns.yaml  roofline.json  testing_plan.yaml
yaml_examples/athena/: roofline.yaml
yaml_examples/avon/: long.yaml  parallelism.yaml  scaling_nodal.yaml  scaling_parallelism.yaml  short.yaml  strong_weak_scaling.yaml  strong_weak_scaling_new.yaml
yaml_examples/avon/broken/: roofline.yaml
yaml_examples/bak/: kudu_plan.yaml
yaml_examples/eurocc_cfd/: perf_comparison.yaml
yaml_examples/industry_demo/: long.yaml  short.yaml
yaml_examples/kudu/: cpp_kokkos_rust.yaml  debugging.yaml  original_versions.yaml  parallelism.yaml  parallelism_strategies.yaml  roofline.yaml  scaling_nodal.yaml  scaling_parallelism.yaml  simple_rust.yaml  strong_weak_scaling.yaml
yaml_examples/kudu/borked/: parallelism_strategies.yaml
yaml_examples/kudu/incomplete/: cpp_versions.yaml  rust_versions.yaml
yaml_examples/kudu/possible/: rooflines.yaml
yaml_examples/old/avon/: roofline.yaml
yaml_examples/old/bak/industry_demo/: strong_weak_scaling.yaml
yaml_examples/old/kudu/: cpp_kokkos_rust.yaml  debugging.yaml  parallelism_strategies.yaml  strong_weak_scaling.yaml
yaml_examples/old/project_demo/: roofline.yaml
yaml_examples/project_demo/: long.yaml  roofline.yaml  strong_weak_scaling.yaml
