[tool.poetry]
name = "pyproject-template"
version = "0.1.0"
description = "A template for making new python projects with all the bells and whistles"
authors = ["EdmundGoodman <egoodman3141@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pyproject_template"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
pre-commit = "^2.20.0"
pre-commit-hooks = "^4.3.0"
pytest = "^7.4.0"
coverage = "^7.2.7"

[tool.black]
target-version = ["py310"]

[tool.isort]
profile = "black"
py_version = 310  # Latest supported, 311 is not
src_paths = ["pyproject_template/"]
filter_files = true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s %(levelname)s %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
addopts = "--strict-markers"
markers = [
    "integration: marks tests as medium size (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
branch = true
source = ["pyproject_template/"]
omit = ["pyproject_template/__main__.py"]

[tool.coverage.report]
fail_under = 90
exclude_lines = [
    'if TYPE_CHECKING:',
    'pragma: no cover'
]
